# Sraphy

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  vcpkg.json
Resources/: imgui.ini
Source/: CMakeLists.txt  char_array.h  char_array_iterator.h  delegate.h  editor.cpp  editor.h  event.h  event_bus.cpp  event_bus.h  gfx_context.cpp  gfx_context.h  gui.cpp  gui.h  log.h  main.cpp  srpch.h  utils.cpp  utils.h  window_manager.cpp  window_manager.h  window_properties.cpp  window_properties.h
Source/events/: events.h
Source/events/app/: app_events.h  app_late_update.h  app_update.h  imgui_update.h
Source/events/input/: char_type.h  key_press.h  key_release.h  key_repeat.h  mouse_button_press.h  mouse_button_release.h  mouse_move.h  mouse_scroll.h
Source/events/window/: window_close.h  window_focus.h  window_framebuffer_size.h  window_iconify.h  window_maximize.h  window_position.h  window_resize.h
Source/gfx/: framebuffer.cpp  framebuffer.h  gfx_context.cpp
